Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,4 @@ steps:
     ng build --prod
   displayName: 'npm install and build'
 - script: |
-    mocha test --reporter mocha-junit-reporter
-- script: npm test
+    ng test --code-coverage
