--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,9 @@
 # Node.js with Angular
+- task: CopyPublishBuildArtifacts@1
+  inputs:
+    CopyRoot: 'dist'
+    ArtifactName: 'Publish artifact'
+    ArtifactType: 'FilePath'
 # Build a Node.js project that uses Angular.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
