Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,4 +25,4 @@ steps:
   inputs:
     CopyRoot: 'dist'
     ArtifactName: 'Publish artifact'
-    ArtifactType: 'FilePath'
+    ArtifactType: 'Container'
