--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,9 @@ steps:
     npm install
     ng build --prod
   displayName: 'npm install and build'
-- task: CopyPublishBuildArtifacts@1
+- task: PublishBuildArtifacts@1
   inputs:
-    CopyRoot: 'dist'
+    CopyRoot: 'dist/'
     ArtifactName: 'Publish artifact'
     ArtifactType: 'Container'
+
