--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
   displayName: 'npm install and build'
 - task: PublishBuildArtifacts@1
   inputs:
-    CopyRoot: 'dist/'
+    CopyRoot: 'dist/tvShows-Project'
     ArtifactName: 'Publish artifact'
     ArtifactType: 'Container'
 
