web config file change

--- a/web.config
+++ b/web.config
@@ -2,6 +2,6 @@
 
 <configuration>
     <system.web>
-        <customErrors mode="RemoteOnly" defaultRedirect="index.html"/>
+        <customErrors mode="RemoteOnly" defaultRedirect="./src/index.html"/>
     </system.web>
 </configuration>
