--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,10 @@ steps:
     npm install
     ng build --prod
   displayName: 'npm install and build'
+
 - task: PublishBuildArtifacts@1
   inputs:
-    CopyRoot: 'dist/tvShows-Project'
-    ArtifactName: 'Publish artifact'
-    ArtifactType: 'Container'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
 
